[package]
name = "dof"
version = "0.6.1"
edition = "2021"

[dependencies]
bollard = { version = "0.21", features = ["chrono"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
tabled = { version = "0.21", features = ["ansi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
